# ice-cream-dataops

./: .gitignore  pyproject.toml
ice-cream-dataops/: build_info.test.yaml  config.prod.yaml  config.test.yaml
ice-cream-dataops/function_local_venvs/icapi_datapoints_extractor/: run_check.py
ice-cream-dataops/function_local_venvs/oee_timeseries/: run_check.py
ice-cream-dataops/modules/bootcamp/ice_cream_api/transformations/: create_asset_hierarchy.Transformation.sql  create_asset_hierarchy.schedule.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/workflows/: wf_icapi_data_pipeline.WorkFlow.yaml
ice-cream-dataops/modules/bootcamp/use_cases/oee/auth/: data_pipeline_oee.Group.yaml
src/ice_cream_dataops/: main.py
