[project]
name = "ice-cream-dataops"
version = "0.1.0"
description = ""
authors = [
    {name = "Jacob Skavang",email = "jacob.qvamskavang@statkraft.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "pandas (>=2.0,<3.0)",
    "cognite-toolkit (>=0.8.91,<0.9.0)"
]

[tool.poetry]
packages = [{ include = "ice_cream_dataops", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "black (>=26.5.1,<27.0.0)"
]
